Fixed overflow to not be shown if not needed.

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,9 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
 	transition: background-color 50000s ease-in-out 0s, color 5000s ease-in-out 0s;
 }
+
+#root {
+	display:flex;
+	flex-direction: column;
+	height: 100%;
+}
